--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -1,4 +1,39 @@
 .list {
-    width: 30%;
-  }
+  width: 30%;
+  overflow-y: auto;
+  scroll-behavior: smooth;
+  scrollbar-width: thin;
   
+}
+
+.restaurant-header {
+  padding: 1rem;
+}
+
+.rating {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.rating label{
+  font-weight: bold;
+}
+
+.rating select {
+  outline: none;
+  cursor: pointer;
+  padding: 2px;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+}
+
+.restaurants{
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem ;
+}
