--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
-  font-family: "Montserrat", serif;
+  font-family: "Comfortaa", serif;
+  scroll-behavior: smooth;
 }
