Changed the list to static due to limitation of api requests

--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -3,7 +3,9 @@
   overflow-y: auto;
   scroll-behavior: smooth;
   scrollbar-width: thin;
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .restaurant-header {
